--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.10",
+    "@tanstack/react-query": "^5.20.2",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
@@ -24,6 +28,7 @@
     "@storybook/nextjs": "^7.6.14",
     "@storybook/react": "^7.6.14",
     "@storybook/test": "^7.6.14",
+    "@tanstack/eslint-plugin-query": "^5.20.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
