--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-storybook": "^0.6.15",
+    "msw": "^1.3.2",
+    "msw-storybook-addon": "^1.10.0",
     "storybook": "^7.6.14",
     "typescript": "^5"
   }
